--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,4 +7,6 @@ body, html {
     outline: 0px solid transparent;
     width: 100%;
     height: 100vh;
+    display: inline-block;
+    white-space: pre-wrap;
 }
