--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,44 @@
-body, html {
-    font-family: 'Roboto', sans-serif;
-    padding: 2px;
-    margin: 0;
+body,
+html {
+  font-family: "Roboto", sans-serif;
+  padding: 2px;
+  margin: 0;
 }
-#mainTextEditor {
-    outline: 0px solid transparent;
-    width: 100%;
-    height: 100vh;
-    display: inline-block;
-    white-space: pre-wrap;
+#mainContainer {
+  width: 65%;
+  text-align: center;
+  margin: 0 auto;
 }
 
-.highlight {
-    background-color: yellow;
+.title {
+  margin-bottom: 10px;
+}
+
+.create-container {
+  margin-bottom: 10px;
+}
+
+.create-container button {
+  padding: 10px;
+  background-color: #0d47a1;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.search-container label,
+.delete-container label,
+.delete-container input,
+.search-container input {
+  display: inline-block;
+  margin: 10px 5px;
+}
+
+.search-container button,
+.delete-container button {
+  padding: 5px;
+  background-color: #009624;
+  border: none;
+  color: white;
+  cursor: pointer;
 }
